# AIFX009_Find_My_Bug

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  env.yaml
Kafka/: README.md  consumer.py  docker-compose.yaml
deploy/client/: Dockerfile
deploy/server/: Dockerfile
include/comm/: Client.h  Server.h
include/engine/: Comm.h
include/engine/client/: Capture.h  Client.h
include/engine/client/captures/: CameraCapture.h  DirectoryCapture.h  StreamingCapture.h  VideoCapture.h  iDevice.h
include/engine/server/: Server.h
include/engine/server/processing/vision/: TrackingProcessor.h  VisionBase.h  VisionProcessor.h  implYolo.h
machine_learning/06_deploy/: pt2target.py
model_factory/deploy/: pt2pb.py
src/: main.cpp
src/comm/: Client.cpp  Server.cpp
src/engine/: CMakeLists.txt  Comm.cpp  Comm.hpp
src/engine/client/: CMakeLists.txt  Capture.cpp  Capture.hpp  Client.cpp  Client.hpp
src/engine/client/captures/: CameraCapture.cpp  CameraCapture.hpp  DirectoryCapture.cpp  DirectoryCapture.hpp  StreamingCapture.cpp  StreamingCapture.hpp  VideoCapture.cpp  VideoCapture.hpp  iDevice.hpp
src/engine/server/: CMakeLists.txt  Server.cpp  Server.hpp  env
src/engine/server/connectors/: Kafka.cpp  Kafka.hpp
src/engine/server/processing/vision/: TrackingProcessor.hpp  VisionProcessor.cpp  VisionProcessor.hpp  implYolo.cpp
src/engine/server/processing/vision/detectors/: implYolo.cpp  implYolo.hpp
src/include/engine/: Comm.h
src/include/engine/server/: Server.h
src/include/engine/server/connectors/: Kafka.h
src/include/engine/server/processing/vision/: VisionProcessor.h
src/include/engine/server/processing/vision/detectors/: implYolo.h
src/server/: CameraCapture.cpp  VideoCapture.cpp
src/toolchains/: pc_linux_64.cmake
tests/: CMakeLists.txt  CaptureTests.cpp  CommunicationTests.cpp
toolchains/: pc_linux_64.cmake  pc_win_64.cmake
